# etl-app

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
apihealth/openapi/: openapi.yaml
apihealth/src/health/api/: __init__.py  app.py  config.py  main.py
apihealth/src/health/api/blueprints/: etl_job_controller_route.py  status_checks_route.py
apihealth/src/health/api/domain/: errors.py
apihealth/src/health/api/services/: context_manager.py
apihealth/src/health/api/services/handlers/: etl_migration_handler.py
apihealth/src/health/api/services/helpers/: project_util.py
apihealth/src/health/api/services/loaders/: api_loader.py  etl_loader.py
apihealth/src/health/api/services/query_services/: data_loader_queries.py
apihealth/src/health/api/services/query_services/session/: session_manager.py
db/changelog/: changelog.yaml  initial_tables.yaml
db/changelog/init-scripts/: init-user-db.sh
scripts/: build_container.sh  run-dev.sh
